--- a/webapp/app/assets/stylesheets/application.css.scss
+++ b/webapp/app/assets/stylesheets/application.css.scss
@@ -12,4 +12,30 @@
  *= require_tree .
  */
 
+@font-face {
+    font-family: 'bebas_neueregular';
+    src: url('/assets/BebasNeue-webfont.eot');
+    src: url('/assets/BebasNeue-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/assets/BebasNeue-webfont.woff') format('woff'),
+         url('/assets/BebasNeue-webfont.ttf') format('truetype'),
+         url('/assets/BebasNeue-webfont.svg#bebas_neueregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 @import "twitter/bootstrap";
+
+.app-body {
+  margin-top: 120px;
+}
+
+.img-fit {
+  max-width: 100%;
+}
+
+@media (min-width: 768px) {
+  .navbar-nav > li > a {
+    padding-top: 28px;
+    padding-bottom: 27px;
+  }  
+}
