Make a license page in webapp, update CC license to 4.0

--- a/webapp/app/assets/stylesheets/application.css.scss
+++ b/webapp/app/assets/stylesheets/application.css.scss
@@ -39,3 +39,14 @@
     padding-bottom: 27px;
   }  
 }
+
+.attribution {
+  h4 {
+    color: #8a6d3b;
+    margin:0;
+  }
+  padding: 20px 20px 10px 20px;
+  margin: 0 0 20px;
+  background-color: #faf8f0;
+  border-left: 3px solid #faebcc;
+}
