Clarify preference copy

--- a/webapp/app/views/pages/license.html.haml
+++ b/webapp/app/views/pages/license.html.haml
@@ -19,7 +19,7 @@
           %strong Justin Bull
         or
         %strong J. Bull
-        (listed in order of preference).
+        (listed in order of most preferred).
 
       %h4 URL / Link
       %p
