Clarify URL preference too

--- a/webapp/app/views/pages/license.html.haml
+++ b/webapp/app/views/pages/license.html.haml
@@ -28,6 +28,11 @@
           %strong
             %code
               = link_to 'https://www.justinbull.ca', 'https://www.justinbull.ca'
+        Both
+        %code https://
+        and
+        %code www.
+        can be omitted if need be.
     %p
       You can see how to properly attribute my work by reading
       = link_to 'Best practises for attribution', 'http://wiki.creativecommons.org/Best_practices_for_attribution', :class => 'btn btn-default'
